# discord-soundfx-bot

./: Cargo.toml  Containerfile  README.md
migrations/: 20230816145151_favorite_sounds.sql
scripts/: dump-query.sh
src/: event_handlers.rs  main.rs  metrics.rs  utils.rs
src/cmds/: favorite.rs  info.rs  manage.rs  mod.rs  play.rs  search.rs  settings.rs  stop.rs
src/models/: guild_data.rs  join_sound.rs  sound.rs
